examples/errors/multi-file/parse_errors/pkg2/foo.ik
package pkg2

fn foo(n Int):
  bar(n)
